force-app/main/default/objects/Time_Log_Entry__c/Time_Log_Entry__c.object-meta.xml
<CustomObject>
    <label>Time Log Entry</label>
    <nameField>
        <displayFormat>TLE-{000000}</displayFormat>
        <label>Time Log Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Log Entries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>