force-app/main/default/objects/Time_Log_Entry__c/fields/Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Period_End_Date__c</fullName>
    <label>Period End Date (usually Sunday)</label>
    <type>Date</type>
</CustomField>