force-app/main/default/objects/Time_Log_Entry__c/fields/Period_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Period_Start_Date__c</fullName>
    <label>Period Start Date (usually Monday)</label>
    <type>Date</type>
</CustomField>