force-app/main/default/objects/Time_Log_Entry__c/fields/Project_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Project_Assignment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Project Assignment</label>
    <referenceTo>Project_Assignment__c</referenceTo>
    <relationshipLabel>Time Log Entries</relationshipLabel>
    <relationshipName>Time_Log_Entries</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>