force-app/main/default/objects/Time_Log_Entry__c/fields/Time_Log_Date__c.field-meta.xml
<CustomField>
    <fullName>Time_Log_Date__c</fullName>
    <label>Time Log Date</label>
    <type>Date</type>
</CustomField>