force-app/main/default/objects/Time_Log_Entry__c/recordTypes/Daily.recordType-meta.xml
<RecordType>
    <fullName>Daily</fullName>
    <active>true</active>
    <label>Daily</label>
</RecordType>