force-app/main/default/objects/Time_Log_Entry__c/recordTypes/Weekly.recordType-meta.xml
<RecordType>
    <fullName>Weekly</fullName>
    <active>true</active>
    <label>Weekly</label>
</RecordType>