force-app/main/default/objects/Time_Log_Entry__c/listViews/All_Daily.listView-meta.xml
<ListView>
    <fullName>All_Daily</fullName>
    <columns>NAME</columns>
    <columns>Project_Assignment__c</columns>
    <columns>Total_Hours__c</columns>
    <columns>Time_Log_Date__c</columns>
    <columns>Approval_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Time_Log_Entry__c.Daily</value>
    </filters>
    <label>All Daily</label>
</ListView>