force-app/main/default/objects/Time_Log_Entry__c/listViews/All_Weekly.listView-meta.xml
<ListView>
    <fullName>All_Weekly</fullName>
    <columns>NAME</columns>
    <columns>Project_Assignment__c</columns>
    <columns>Total_Hours__c</columns>
    <columns>Period_Start_Date__c</columns>
    <columns>Period_End_Date__c</columns>
    <columns>Approval_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Time_Log_Entry__c.Weekly</value>
    </filters>
    <label>All Weekly</label>
</ListView>